<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.views.vehicles.VehicleFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/vehicles_shimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/shimmer_vehicle_fragment"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/vehicle_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/vert_guide" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vert_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"/>

        <TextView
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="26sp"
            android:text="@string/brand_placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/vert_guide"/>

        <TextView
            android:id="@+id/model_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="26sp"
            android:text="@string/model_placeholder"
            app:layout_constraintStart_toEndOf="@id/brand_name"
            app:layout_constraintTop_toTopOf="@id/brand_name"
            app:layout_constraintBottom_toBottomOf="@id/brand_name"/>

        <TextView
            android:id="@+id/section_vehicle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/brand_name"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_information"
            android:textSize="19sp"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vehicle_year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/year_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section_vehicle_label" />

        <TextView
            android:id="@+id/vehicle_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:text="@string/year_placeholder"
            app:layout_constraintStart_toEndOf="@id/vehicle_year_label"
            app:layout_constraintTop_toTopOf="@id/vehicle_year_label"
            app:layout_constraintBottom_toBottomOf="@id/vehicle_year_label" />

        <TextView
            android:id="@+id/vehicle_doors_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/doors_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vehicle_year_label" />

        <TextView
            android:id="@+id/vehicle_doors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:text="@string/placeholder"
            app:layout_constraintStart_toEndOf="@id/vehicle_doors_label"
            app:layout_constraintTop_toTopOf="@id/vehicle_doors_label"
            app:layout_constraintBottom_toBottomOf="@id/vehicle_doors_label" />

        <TextView
            android:id="@+id/section_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/vehicle_doors_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_type"
            android:textSize="19sp"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/brand_logo"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/section_type_label"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/vehicle_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section_type_label" />

        <TextView
            android:id="@+id/vehicle_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:text="@string/placeholder"
            app:layout_constraintStart_toEndOf="@id/vehicle_type_label"
            app:layout_constraintTop_toTopOf="@id/vehicle_type_label"
            app:layout_constraintBottom_toBottomOf="@id/vehicle_type_label" />

        <ImageView
            android:id="@+id/brand_country_flag"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@id/vehicle_brand_country"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/vehicle_brand_country_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/brand_country_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vehicle_type" />

        <TextView
            android:id="@+id/vehicle_brand_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="18sp"
            android:text="@string/placeholder"
            app:layout_constraintStart_toEndOf="@id/vehicle_brand_country_label"
            app:layout_constraintTop_toTopOf="@id/vehicle_brand_country_label"
            app:layout_constraintBottom_toBottomOf="@id/vehicle_brand_country_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>